packages/cashc/test/compiler/TypeError/do_while_loop_bytes32_condition.cash
contract Loopy() {
    function doLoop() {
        int i = 0;

        do {
            i = i + 1;
        } while (tx.inputs[0].outpointTransactionHash);

        console.log(i);
        require(i > 2);
    }
}
